Refactor medical report models and add controllers
Refactored DTOs and entities to support nested sub-records and consultations, introduced new enums (State, BackgroundType), and added a base Sub class for sub-record inheritance. Added REST controllers for Consultation, Echographie, FertilitySubRecord, ObstetricsRecord, and updated existing controllers for improved API structure and CORS support. Switched database dependency from MySQL to PostgreSQL in pom.xml.